syntax = "proto3";

package proto;

message Message {
  string content = 2;
}

service TextToText {
  rpc ProccessPlainText(Message) returns (Message) ;
}